# Capture

./: .gitignore  .gitmodules  CMakeLists.txt  Capture.cpp  Capture.h  LICENSE.md  Openvino.cpp  Openvino.h  README.md
test/: dis_coeff.txt  intrinsics.txt  test.py
